# asm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
masm/: .gitignore  main.cpp  masm.sln  masm.vcxproj  masm.vcxproj.filters
masm/src/1_Registers/: registers.asm
masm/src/2_DataTypes/: datatypes.asm
nasm/: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
nasm/src/: console.asm  main.asm
nasm/src/00_SystemCalls/: Windows.asm
nasm/src/01_Segments/: Segments.asm
nasm/src/02_Registers/: Registers.asm
nasm/src/03_Conditionals/: Conditionals.asm
nasm/src/04_Procedures/: Procedures.asm
nasm/src/05_Loops/: Loops.asm
src/00_SystemCalls/: Windows.asm
src/03_Conditionals/: Conditionals.asm
src/04_Procedures/: Procedures.asm
src/05_Loops/: Loops.asm
src/arm64/: Cargo.toml  build.rs
src/arm64/asm/: functions.s  print_string.s
src/arm64/src/: main.rs
src/x86_64/: CMakeLists.txt  main.cpp
src/x86_64/01_Segments/: Segments.asm
src/x86_64/02_Registers/: Registers.asm
